# hogwarts-httprunner

./: .gitignore  .travis.yml  README.md  pyproject.toml  test_mubu_login.py
hogwarts_httprunner/: cli.py  loader.py  runner.py
tests/: test_cli.py  test_parse_content.py  test_single_api.py  test_single_testcase.py
tests/api/: get_homepage.yml  get_login.yml  get_login_password.yml  post_submit.yml
tests/testcases/: mubu_login.yml
