[tool.poetry]
name = "hogwarts-httprunner"
version = "0.1.0"
description = ""
authors = ["LeeYatyi"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"
requests = "^2.22.0"
pyyaml = "^5.3"

[tool.poetry.dev-dependencies]
coverage = "^5.0.3"
coveralls = "^1.11.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
